// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer regexpBetterer (deprecated) should report the existence of RegExp matches 1`] = `
"// BETTERER RESULTS V1.
exports[\`regexp no hack comments\`] = {
  timestamp: 0,
  value: \`{
    \\"src/index.ts:4126639614\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645651780\\"]
    ]
  }\`
};"
`;

exports[`betterer regexpBetterer (deprecated) should report the existence of RegExp matches 2`] = `
Array [
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked for the first time! 🎉",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  warn  ⚠️  - ",
  "\\"regexp no hack comments\\" stayed the same. 😐",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  warn  ⚠️  - ",
  "1 test stayed the same. 😐",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  erro  🔥  - ",
  "\\"regexp no hack comments\\" got worse. 😔",
  "",
  " ☀️  betterer  warn  ⚠️  - ",
  "1 existing issue in \\"src/index.ts\\".",
  " ☀️  betterer  erro  🔥  - ",
  "1 new issue in \\"src/index.ts\\":",
  "
   RegExp match 
  1 | // HACK:
> 2 | // HACK:
    | ^^^^^^^",
  "",
  "",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  erro  🔥  - ",
  "1 test got worse. 😔",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" met its goal! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  succ  ✅  - ",
  "1 test got better! 😍",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" met its goal! 🎉",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" has already met its goal! ✨",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked for the first time! 🎉",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" met its goal! 🎉",
]
`;

exports[`betterer regexpBetterer (deprecated) should throw if there is no globs 1`] = `
Array [
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  erro  🔥  - ",
  "could not read config from \\"<project>/fixtures/test-betterer-regexp-no-globs-deprecated/.betterer\\". 😔",
  " ☀️  betterer  erro  🔥  - ",
  "For \`@betterer/regexp\` to work, you need to provide a file glob, e.g. \`'./src/**/*'\`. ❌",
]
`;

exports[`betterer regexpBetterer (deprecated) should throw if there is no regexp 1`] = `
Array [
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  erro  🔥  - ",
  "could not read config from \\"<project>/fixtures/test-betterer-regexp-no-regexp-deprecated/.betterer\\". 😔",
  " ☀️  betterer  erro  🔥  - ",
  "For \`@betterer/regexp\` to work, you need to provide a RegExp, e.g. \`/^foo$/\`. ❌",
]
`;

exports[`betterer should report the existence of RegExp matches 1`] = `
"// BETTERER RESULTS V1.
exports[\`regexp no hack comments\`] = {
  timestamp: 0,
  value: \`{
    \\"src/index.ts:4126639614\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645651780\\"]
    ]
  }\`
};"
`;

exports[`betterer should report the existence of RegExp matches 2`] = `
Array [
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked for the first time! 🎉",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  warn  ⚠️  - ",
  "\\"regexp no hack comments\\" stayed the same. 😐",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  warn  ⚠️  - ",
  "1 test stayed the same. 😐",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  erro  🔥  - ",
  "\\"regexp no hack comments\\" got worse. 😔",
  "",
  " ☀️  betterer  warn  ⚠️  - ",
  "1 existing issue in \\"src/index.ts\\".",
  " ☀️  betterer  erro  🔥  - ",
  "1 new issue in \\"src/index.ts\\":",
  "
   RegExp match 
  1 | // HACK:
> 2 | // HACK:
    | ^^^^^^^",
  "",
  "",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  erro  🔥  - ",
  "1 test got worse. 😔",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" met its goal! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  succ  ✅  - ",
  "1 test got better! 😍",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" met its goal! 🎉",
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"regexp no hack comments\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" has already met its goal! ✨",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 test got checked for the first time! 🎉",
  " ☀️  betterer  succ  ✅  - ",
  "\\"regexp no hack comments\\" met its goal! 🎉",
]
`;

exports[`betterer should throw if there is no regexp 1`] = `
Array [
  "
   / | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ / / _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__/ /___|/__|/__/___|_|  /___|_|   
 ",
  " ☀️  betterer  erro  🔥  - ",
  "could not read config from \\"<project>/fixtures/test-betterer-regexp-no-regexp/.betterer\\". 😔",
  " ☀️  betterer  erro  🔥  - ",
  "For \`@betterer/regexp\` to work, you need to provide a RegExp, e.g. \`/^foo$/\`. ❌",
]
`;
